src/objects/ACCL__Promotion__c.object
<CustomObject>
    <description>Promotion is an activity of a user which includes the definition of prices for a time segment.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Decides whether a promotion is available.</description>
        <inlineHelpText>Defines if the promotion is considered in the Trade Calendar and the Account Plan.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Aggregation_Category__c</fullName>
        <label>Aggregation Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Anchor_Account_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Customer Set</description>
        <label>Anchor Customer Set</label>
        <referenceTo>ACCL__Account_Set__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Anchor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Customer</description>
        <label>Anchor Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Check_Selectable__c</fullName>
        <description>Used for Selectable Promotion List View</description>
        <formula>ACCL__Promotion_Template__r.ACCL__Selectable_Promotion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Selectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Commit_Date__c</fullName>
        <description>The date the promotion was commited. This field is taken for getting the prices and discounts of a promotion.</description>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Count_Tactics__c</fullName>
        <label>Count Tactics</label>
        <summaryForeignKey>ACCL__Tactic__c.ACCL__Promotion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom1_Date_From__c</fullName>
        <description>Start of a project specific time range (e.g. pre-dip)</description>
        <label>Custom1 Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom1_Date_Thru__c</fullName>
        <description>End of a project specific time range (e.g. pre-dip)</description>
        <label>Custom1 Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom2_Date_From__c</fullName>
        <description>Start of a project specific time range (e.g. post-dip)</description>
        <label>Custom2 Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom2_Date_Thru__c</fullName>
        <description>End of a project specific time range (e.g. post-dip)</description>
        <label>Custom2 Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_From__c</fullName>
        <description>Promotion date from</description>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_Thru__c</fullName>
        <description>Promotion date thru</description>
        <label>Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Date_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Delivery Date From</description>
        <label>Shipment Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Date_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Delivery Date Thru</description>
        <label>Shipment Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Effective_Brands__c</fullName>
        <description>Holds a list (Json Array) of the effective Brand SfIds for this promotion.</description>
        <label>Effective Brands</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Effective_Categories__c</fullName>
        <description>Holds a list (Json Array) of the effective Category SfIds for this promotion.</description>
        <label>Effective Categories</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the promotion that is used as reference in external systems. This id will be used by integration to import tactic specific actuals into the offplatform backend.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Text_Language_1__c</fullName>
        <description>Holds the Group Text in language 1</description>
        <label>Group Text Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Text_Language_2__c</fullName>
        <description>Holds the Group Text in language 2</description>
        <label>Group Text Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Text_Language_3__c</fullName>
        <description>Holds the Group Text in language 3</description>
        <label>Group Text Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Group_Text__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Group_Text_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Group_Text_Language_2__c,ACCL__Group_Text_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Group_Text_Language_3__c,ACCL__Group_Text_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Group_Text_Language_4__c,ACCL__Group_Text_Language_1__c),
ACCL__Group_Text_Language_1__c)</formula>
        <inlineHelpText>Used to group promotions in the trade calendar (Group By: Group Text).</inlineHelpText>
        <label>Group Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__In_Calculation_Time_Frame__c</fullName>
        <formula>IF(((TODAY() - $Setup.ACCL__Promotion_Calculation_Server_Offset__c.ACCL__Days_Before__c) &lt;= ACCL__Date_Thru__c) &amp;&amp; (ACCL__Date_From__c &lt;= (TODAY() + $Setup.ACCL__Promotion_Calculation_Server_Offset__c.ACCL__Days_After__c)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Calculation Time Frame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if a dynamic product set should be frozen and not be changed anymore. Can be set manually or via a workflow rule.</description>
        <label>Is Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the status of Promotion.</description>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Push_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if the push process for this promotion is currently in progress. Has only meaning for pushable promotions</description>
        <label>Is Push In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Dirty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set as true whenever there is any modification in the promotion record.</description>
        <label>KPI Dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_1__c</fullName>
        <description>Writeback Synchronized KPI 1</description>
        <label>KPI Value 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_2__c</fullName>
        <description>Writeback Synchronized KPI 2</description>
        <label>KPI Value 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_3__c</fullName>
        <description>Writeback Synchronized KPI 3</description>
        <label>KPI Value 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Last_Push_Update_Executed__c</fullName>
        <description>Timestamp when the parent promotion was last pushed</description>
        <label>Last Push Update Executed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Last_Push_Update_Received__c</fullName>
        <description>Timestamp when the child promotion received the last push update</description>
        <label>Last Push Update Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Lock_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Manual_Calculation_Input__c</fullName>
        <defaultValue>&apos;{}&apos;</defaultValue>
        <label>Manual Calculation Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Date_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Order Date From.</description>
        <label>Order Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Date_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Order Date Thru.</description>
        <label>Order Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Outdated_Staging_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdated Staging Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the original promotion this promotion was derived from</description>
        <label>Parent Promotion</label>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Derived Promotions</relationshipLabel>
        <relationshipName>DerivedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <description>Phase of the promotion</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Modeling</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                    <default>true</default>
                    <label>Committed</label>
                </value>
                <value>
                    <fullName>ForApproval</fullName>
                    <label>For Approval</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Placement_Date_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Placement Date From</description>
        <label>In-Store Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Placement_Date_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Placement Date Thru</description>
        <label>In-Store Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Template_Description__c</fullName>
        <formula>ACCL__Promotion_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to promotion template.</description>
        <label>Promotion Template</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ACCL__Promotion_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Promotion_Template__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Push_Target_Account_Selection__c</fullName>
        <description>Only filled for Pushable Promotions.Contains a JSON with the selected push target accounts.</description>
        <label>Push Target Account Selection</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Reference_Date__c</fullName>
        <description>Reference date used for hierarchy search. The date is retrieved from the promotion template used reference date field.</description>
        <inlineHelpText>Reference date used for hierarchy search.</inlineHelpText>
        <label>Reference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Relevant_For_Account_Plan__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is for project customization. Through this field one can set if the Promotion is specific for the Account Plan.</description>
        <inlineHelpText>Through this field one can set if the Promotion is specific for the Account Plan.</inlineHelpText>
        <label>Relevant For Account Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <formula>TEXT (ACCL__Promotion_Template__r.ACCL__Sales_Org__c)</formula>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_1_Manual_Inputs__c</fullName>
        <label>Scenario 1 Manual Inputs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_1_Parameters__c</fullName>
        <description>Scenario Parameters for Scenario 1 in JSON format :
[{&quot;KPI&quot;:&lt;KPI Name&gt;,&quot;value&quot;:&lt;KPI value&gt;,&quot;applied&quot;:&lt;boolean&gt;},...]</description>
        <label>Scenario_1_Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_2_Manual_Inputs__c</fullName>
        <label>Scenario 2 Manual Inputs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_2_Parameters__c</fullName>
        <description>Scenario Parameters for Scenario 2</description>
        <label>Scenario_2_Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_3_Manual_Inputs__c</fullName>
        <label>Scenario 3 Manual Inputs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_3_Parameters__c</fullName>
        <description>Scenario Parameters for Scenario 3</description>
        <label>Scenario_3_Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Selected_Scenario__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Index of the selected Scenario.</description>
        <label>Selected Scenario</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Skip_Version_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to skip the version update. This flag will always be stored as FALSE on database but the input value will be checked to detect if the version must be upgraded or not.</description>
        <label>Skip Version Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Slogan_Language_1__c</fullName>
        <description>Holds the slogan in language 1.</description>
        <label>Slogan Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Slogan_Language_2__c</fullName>
        <description>Holds the slogan in language 2.</description>
        <label>Slogan Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Slogan_Language_3__c</fullName>
        <description>Holds the slogan in language 3.</description>
        <label>Slogan Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Slogan__c</fullName>
        <description>Slogan in language 1</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Slogan_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Slogan_Language_2__c,ACCL__Slogan_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Slogan_Language_3__c,ACCL__Slogan_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Slogan_Language_4__c,ACCL__Slogan_Language_1__c),
ACCL__Slogan_Language_1__c)</formula>
        <label>Slogan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sub_Accounts_Selection__c</fullName>
        <description>Determines the selection of all the sub accounts of parent customer that are valid.</description>
        <label>Sub Accounts Selection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Sync_Relevant_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Relevant Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__To_Date_Paid__c</fullName>
        <label>To Date Paid</label>
        <summarizedField>ACCL__Tactic__c.ACCL__To_Date_Paid_Amount__c</summarizedField>
        <summaryForeignKey>ACCL__Tactic__c.ACCL__Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Color_Code_1__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>RGB Code for Color Schema 1 of Usage &apos;TradeCalendar&apos;. Reserved for Template Specific Coloring</inlineHelpText>
        <label>Trade Calendar Color Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Color_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Color_Code_2__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>RGB Code for Color Schema 2 of Usage &apos;TradeCalendar&apos;. Reserved for Phase Specific Coloring</inlineHelpText>
        <label>Trade Calendar Color Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Color_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Color_Code_3__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>RGB Code for Color Schema 3 of Usage &apos;TradeCalendar&apos;. Reserved for project specific Coloring</inlineHelpText>
        <label>Trade Calendar Color Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Color_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Transparency_1__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>Transparency Value for Color Schema 1 of Usage &apos;TradeCalendar&apos;. Reserved for Template Specific Coloring</inlineHelpText>
        <label>Trade Calendar Transparency 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Transparency_2__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>Transparency Value for Color Schema 2 of Usage &apos;TradeCalendar&apos;. Reserved for Phase Specific Coloring</inlineHelpText>
        <label>Trade Calendar Transparency 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Transparency_3__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <inlineHelpText>Transparency Value for Color Schema 3 of Usage &apos;TradeCalendar&apos;. Reserved for project specific Coloring</inlineHelpText>
        <label>Trade Calendar Transparency 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Version_Synced_Off_Platform__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Version received by the Off Platform operations.</description>
        <label>Version Synced Off Platform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Current version of the record. Updated on each operation.</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Volume_Percent__c</fullName>
        <description>This field is calculated by SmartUI every time the Sub Account list values are updated.</description>
        <label>% of Volume</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccTeam__c</fullName>
        <description>Indicates the team information of the account. Used for filtering.</description>
        <formula>ACCL__Anchor_Account__r.MDLZ_AccountTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccTerritory__c</fullName>
        <description>Indicates the territory information of the account. Used for filtering.</description>
        <formula>ACCL__Anchor_Account__r.MDLZ_AccountTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccountTeam__c</fullName>
        <description>Indicates the team information of the account, value will come from the flow</description>
        <label>Account Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccountTerritory__c</fullName>
        <description>Indicates the territory information of the account, value will come from the flow</description>
        <label>Account Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_DayOfWeek__c</fullName>
        <description>Formula field to calculate day of week of promotion</description>
        <formula>ACCL__Date_From__c-WEEKDAY(ACCL__Date_From__c-8)</formula>
        <label>Day of Week</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>MDLZ_KeyAccount__c</fullName>
        <description>Value for this filed will be coming from salesforce flow, related to story MRELKXIW-3829</description>
        <label>KeyAccount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Slogan__c</columns>
        <columns>ACCL__Promotion_Template__c</columns>
        <columns>ACCL__Date_From__c</columns>
        <columns>ACCL__Date_Thru__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Anchor_Account__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Selectable_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Slogan__c</columns>
        <columns>ACCL__Promotion_Template__c</columns>
        <columns>ACCL__Date_From__c</columns>
        <columns>ACCL__Date_Thru__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Anchor_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Check_Selectable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Selectable Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sellable_Promotion</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Slogan__c</columns>
        <columns>ACCL__Promotion_Template__c</columns>
        <columns>ACCL__Date_From__c</columns>
        <columns>ACCL__Date_Thru__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Anchor_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Promotion__c.ACCL__SellablePromotion</value>
        </filters>
        <label>Sellable Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TPM_Promotions</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Slogan__c</columns>
        <columns>ACCL__Promotion_Template__c</columns>
        <columns>ACCL__Date_From__c</columns>
        <columns>ACCL__Date_Thru__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Anchor_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Promotion__c.ACCL__Promotion</value>
        </filters>
        <label>TPM Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Promotion</fullName>
        <active>true</active>
        <description>Record type for editable page layout.</description>
        <label>Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__SellablePromotion</fullName>
        <active>true</active>
        <description>Promotion record type for FSM</description>
        <label>SellablePromotion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__Avoid_Change_External_ID</fullName>
        <active>true</active>
        <description>ExternalId can&apos;t be edited if it has an existent value.</description>
        <errorConditionFormula>AND (
  ISCHANGED(ACCL__ExternalId__c),
  NOT(ISBLANK(PRIORVALUE(ACCL__ExternalId__c)))
)</errorConditionFormula>
        <errorDisplayField>ACCL__ExternalId__c</errorDisplayField>
        <errorMessage>ExternalId can&apos;t be edited if it has an existent value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Custom1_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Custom1 Date From can&apos;t be later than Custom1 Date Thru</description>
        <errorConditionFormula>ACCL__Custom1_Date_From__c  &gt;  ACCL__Custom1_Date_Thru__c</errorConditionFormula>
        <errorMessage>Custom1 Date From can&apos;t be later than Custom1 Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Custom2_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Custom2 Date From can&apos;t be later than Custom2 Date Thru</description>
        <errorConditionFormula>ACCL__Custom2_Date_From__c  &gt;  ACCL__Custom2_Date_Thru__c</errorConditionFormula>
        <errorMessage>Custom2 Date From can&apos;t be later than Custom2 Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__DC_Commit_Date_Validation</fullName>
        <active>true</active>
        <description>The Commit_Date must be less than or equal to DateThru.</description>
        <errorConditionFormula>ACCL__Commit_Date__c  &gt;  ACCL__Date_Thru__c</errorConditionFormula>
        <errorMessage>The Commit Date must be the same day or sooner than Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Date_From_Date_Thru_Validation</fullName>
        <active>true</active>
        <description>Date From can&apos;t be later than Date Thru.</description>
        <errorConditionFormula>ACCL__Date_From__c  &gt;  ACCL__Date_Thru__c</errorConditionFormula>
        <errorMessage>Date From can&apos;t be later than Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Delivery_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Delivery Date From can&apos;t be later than Delivery Date Thru.</description>
        <errorConditionFormula>ACCL__Delivery_Date_From__c  &gt;  ACCL__Delivery_Date_Thru__c</errorConditionFormula>
        <errorMessage>Delivery Date From can&apos;t be later than Delivery Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Order_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Order Date From can&apos;t be later than Order Date Thru.</description>
        <errorConditionFormula>ACCL__Order_Date_From__c  &gt;  ACCL__Order_Date_Thru__c</errorConditionFormula>
        <errorMessage>Order Date From can&apos;t be later than Order Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Placement_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Placement Date From can&apos;t be later than Placement Date Thru.</description>
        <errorConditionFormula>ACCL__Placement_Date_From__c  &gt;  ACCL__Placement_Date_Thru__c</errorConditionFormula>
        <errorMessage>Placement Date From can&apos;t be later than Placement Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Promotion_Template_Change</fullName>
        <active>true</active>
        <description>The Promotion Template can&apos;t be edited after Promotion creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Promotion_Template__c )</errorConditionFormula>
        <errorMessage>The Promotion Template can&apos;t be edited after Promotion creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Selected_Scenario_1_to_5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ACCL__Selected_Scenario__c &lt; 0, ACCL__Selected_Scenario__c &gt; 5)</errorConditionFormula>
        <errorMessage>The value isn&apos;t in the range [1..5].</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_Promotion_Custom1TimeFrame</fullName>
        <active>false</active>
        <description>Promotion Custom 1 Time Frame must be within Complete Promotion Time Frame</description>
        <errorConditionFormula>OR(AND(NOT(ISNULL(ACCL__Custom1_Date_From__c)),ACCL__Date_From__c &gt; ACCL__Custom1_Date_From__c),
          AND(NOT(ISNULL(ACCL__Custom1_Date_Thru__c )),ACCL__Custom1_Date_Thru__c &gt; ACCL__Date_Thru__c))</errorConditionFormula>
        <errorMessage>Promotion Custom 1 Time Frame must be within Complete Promotion Time Frame.</errorMessage>
    </validationRules>
</CustomObject>